# iot-env-sensor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE.md  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  stdkconfig.cmake
main/include/: iot_hum_meas.h  iot_temp_meas.h
main/src/: iot_hum_meas.c  iot_temp_meas.c  main.c
